--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                 <label class="label">
                   <span class="label-text">Amount</span>
                 </label>
-                <input id="input-cash-out" type="text" placeholder="Amount" class="input input-bordered" required />
+                <input id="input-cash-out" type="text" placeholder="Cash Out Amount" class="input input-bordered" required />
               </div>
               <div class="form-control">
                 <label class="label">
@@ -69,7 +69,7 @@
           
               </div>
               <div class="form-control mt-6">
-                <button id="btn-add-money" class="btn btn-primary">Cash Out</button>
+                <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
               </div>
             </form>
           </div>
@@ -79,6 +79,7 @@
     </div>
   </main>
   <!-- <script src="./JS/home.js"></script> -->
-  <script src="./JS/addmoney.js"></script>
+  <script src="./JS/addMoney.js"></script>
+  <script src="./JS/cashOut.js"></script>
 </body>
 </html>
