added toggle feature

--- a/home.html
+++ b/home.html
@@ -26,12 +26,12 @@
 
           <!-- user action button -->
            <div>
-            <button class="btn btn-lg">Add Money</button>
-            <button class="btn btn-lg">Cash Out</button>
+            <button id="btn-show-add-money" class="btn btn-lg">Add Money</button>
+            <button id="btn-show-cash-out" class="btn btn-lg">Cash Out</button>
            </div>
            <div class="divider"></div>
             <!-- add money form start -->
-            <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+            <div id="add-money-form" class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
               <form class="card-body">
                 <div class="form-control">
                   <label class="label">
@@ -52,8 +52,9 @@
               </form>
             </div>
             <!-- add money end -->
+
            <!-- CASH OUT  start -->
-           <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+           <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
             <form class="card-body">
               <div class="form-control">
                 <label class="label">
@@ -81,5 +82,6 @@
   <!-- <script src="./JS/home.js"></script> -->
   <script src="./JS/addMoney.js"></script>
   <script src="./JS/cashOut.js"></script>
+  <script src="./JS/features.js"></script>
 </body>
 </html>
